とりあえずコミット
git-svn-id: svn+ssh://rinshoundoshogai.sakura.ne.jp/home/rinshoundoshogai/svn/rinsho@3 a4f8b3a5-e007-e211-b16c-525400821517

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-hello
+<!DOCTYPE HTML>
+<html>
+<head>
+<meta charset="utf-8">
+<title>臨床運動障害研究会</title>
+<link href="style.css" rel="stylesheet" type="text/css">
+</head>
+
+<div id="wrapper">
+  <header>
+    <img src="header.png" alt="header">
+    <ul id="nav">  
+		<li><a href="index.html">Home</a></li>  
+		<li><a href="#">Staff</a></li>  
+		<li><a href="#">Event</a></li>  
+		<li><a href="#">Log</a></li>  
+		<li><a href="#">Link</a></li>  
+	</ul> 
+  </header>
+  <div id="main">
+    <div id="contents">
+    <img src="image8.png" alt="top">
+<table border="0" width="950px" cellpadding="0">
+  <tr>
+    <td><img src="IMG_0350.jpg" width="210" height="90" alt="勉強会"></td>
+    <td><img src="v.png" width="210" height="90" alt="海外ボランティア"></td>
+    <td><img src="m.png" width="210" height="90" alt="水無瀬病院"></td>
+    <td><img src="t.png" width="210" height="90" alt="お問い合わせ"></td>
+  </tr>
+</table>
+  </div>
+  <footer>
+	<small>
+    Copyright © 2012 miyazaki-seminar All Rights Reserved. </small>
+  </footer>
+</div>
+</html>
