試し書きを削除 コミットの仕方は分かったけどバージョンを遡る方法が分からないわ 今は最新の物との比較しか出来ず、更に前のバージョンに復元する事が出来ない
git-svn-id: svn+ssh://rinshoundoshogai.sakura.ne.jp/home/rinshoundoshogai/svn/rinsho@7 a4f8b3a5-e007-e211-b16c-525400821517

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
   <footer>
 	<small>
-    Copyright © 2012 miyazaki-seminar All Rights Reserved. あああ</small>
+    Copyright © 2012 miyazaki-seminar All Rights Reserved. </small>
   </footer>
 </div>
 </html>
