--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>臨床運動障害研究会</title>
+<title>あ臨床運動障害研究会</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
