渡辺　上部メニュー　リンク修正（logページ向けリンク） 　　　　logページ内に wordpress 用のファイルを設置（log/index.php）
git-svn-id: svn+ssh://rinshoundoshogai.sakura.ne.jp/home/rinshoundoshogai/svn/rinsho@13 a4f8b3a5-e007-e211-b16c-525400821517

--- a/event/0126.html
+++ b/event/0126.html
@@ -14,7 +14,7 @@
 		<li><a href="../index.html">Home</a></li>  
 		<li><a href="../staff/staff.html">Staff</a></li>  
 		<li><a href="event.html">Event</a></li>  
-		<li><a href="../log/log.html">Log</a></li>  
+		<li><a href="../log/">Log</a></li>  
 		<li><a href="../volunteer/volunteer.html">Volunteer</a></li>  
 	</ul> 
   </header>
