--- a/event/1201.html
+++ b/event/1201.html
@@ -14,7 +14,7 @@
 		<li><a href="../index.html">Home</a></li>  
 		<li><a href="../staff/staff.html">Staff</a></li>  
 		<li><a href="event.html">Event</a></li>  
-		<li><a href="../log/log.html">Log</a></li>  
+		<li><a href="../log/">Log</a></li>  
 		<li><a href="../volunteer/volunteer.html">Volunteer</a></li>  
 	</ul> 
   </header>
