山本 トランザクション処理を行うようにした。それに伴いconnect_to_mysql()も若干変更した。「講座」を「研修」に変更した。
git-svn-id: svn+ssh://rinshoundoshogai.sakura.ne.jp/home/rinshoundoshogai/svn/rinsho@19 a4f8b3a5-e007-e211-b16c-525400821517

--- a/system/index.html
+++ b/system/index.html
@@ -9,9 +9,9 @@
 	</head>
 	<body>
 		<header><h1 style='text-align:center;'>index</h1></header>
-		<a href="./lessons.php">講座一覧</a> ←一般利用者用<br>
-		<a href="register_lesson.php">講座登録</a> ←管理者用<br>
-		<a href="control_lessons.php">講座管理</a> ←管理者用<br>
+		<a href="./lessons.php">研修一覧</a> ←一般利用者用<br>
+		<a href="register_lesson.php">研修登録</a> ←管理者用<br>
+		<a href="control_lessons.php">研修管理</a> ←管理者用<br>
 		<a href="input_name.php">キャンセル手続き</a> ←一般利用者用<br>
 		<a href="check_cancel.php">キャンセル待ちへ空きが出来たことをメール</a> ←サーバで周期的に実行<br>
 		<form action="mail_remind.php">
