--- a/staff/index.html
+++ b/staff/index.html
@@ -27,35 +27,38 @@
 		<li><a href="staff_hs.html">関寛樹</a></li>
 		<li><a href="staff_so.html">岡田真也</a></li>
 		<li><a href="staff_ys.html">清水康弘</a></li>
-	</ul>  		</div>
+	</ul>
+  		</div>
     <div id="contents">
       <p>&nbsp;</p>
       <h1>STAFF</h1>
       <p>&nbsp;</p>
 <div id="center">
-<img src="../img/kt.jpg" width="280">
+<img src="../img/mo.jpg" width="280">
 </div>
-<table width="600" border="1" align="center">
-
-  <tr>
-    <td width="100" height="50"><p>田中謙次</p></td>
-    <td height="50">理学療法士・鍼灸師</td>
-  </tr>
-  <tr>
-    <td width="100" height="50">所属</td>
-    <td height="50"><p>水無瀬病院リハビリテーション部理学療法科副部長</p>
-      <p><a href="http://web.me.com/jointfunction/jointfunction/HOME.html">関節機能障害研究会理事</a></p></td>
-  </tr>
-  <tr>
-    <td width="100" height="100">学歴</td>
-    <td height="100"><p>行岡鍼灸専門学校 鍼灸学科</p>
-      <p>↓</p>
-      <p>行岡リハビリテーション専門学校　理学療法学科</p></td>
-  </tr>
-</table>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+      <table width="600" border="1" align="center">
+        <tr>
+          <td width="100" height="50"><p>奥田正作</p>
+            <p>（代表）</p></td>
+          <td height="50">理学療法士・柔道整復師</td>
+        </tr>
+        <tr>
+          <td width="100" height="50">所属</td>
+          <td height="50"><p>水無瀬病院リハビリテーション部理学療法科</p>
+            <p>明治東洋医学院専門学校　非常勤講師</p></td>
+        </tr>
+        <tr>
+          <td width="100" height="150">学歴</td>
+          <td height="150"><p>同志社大学経済学部卒業</p>
+            <p>↓</p>
+            <p>藍野医療福祉専門学校（現藍野大学）　理学療法学科卒業</p>
+            <p>↓</p>
+            <p>神戸大学大学院医学系研究科保健学専攻　博士前期課程卒業</p>
+            <p>↓ </p>
+            <p>明治東洋医学院専門学校　 柔道整復学科卒業</p></td>
+        </tr>
+      </table>
+      <p>&nbsp;</p>
     </div>
     <footer>
  <table border="0" width="950px" cellpadding="0">
