--- a/event/index.html
+++ b/event/index.html
@@ -5,6 +5,9 @@
 <title>臨床運動障害研究会</title>
 <link href="../style.css" rel="stylesheet" type="text/css">
 <style type="text/css">
+p {
+	text-align: center;
+}
 </style></head>
 
 <div id="wrapper">
@@ -35,44 +38,26 @@
 <h1>EVENT</h1>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<table border="none">
-  <tr>
-    <td width="80" height="50">イベント名</td>
-    <td width="500" height="50">肩関節障害の評価と治療</td>
-  </tr>
-  <tr>
-    <td width="80" height="50">日時</td>
-    <td width="500" height="50">１月２６日～２７日</td>
-  </tr>
-  <tr>
-    <td width="80" height="50">講師</td>
-    <td width="500" height="50">千葉慎一</td>
-  </tr>
-  <tr>
-    <td width="80" height="50">所属</td>
-    <td width="500" height="50">昭和大学藤が丘リハビリテーション病院</td>
-  </tr>
-  <tr>
-    <td width="80" height="50">会場</td>
-    <td width="500" height="50">明治東洋医学院専門学校（大阪）</td>
-  </tr>
-  <tr>
-    <td width="80" height="50">費用</td>
-    <td width="500" height="50">未定</td>
-  </tr>
-  <tr>
-    <td height="50" colspan="2">申し込む</td>
-  </tr>
-</table>
 <p>&nbsp;</p>
+<p>左から選択してください。</p>
+<p>下に行くほど古いイベントとなっています。</p>
 <p>&nbsp;</p>
+<h4>↓近日開催予定のイベント↓</h4>
 <p>&nbsp;</p>
+<p><a href="0921.html">頸部と上位胸椎に対する機能解倍的アプローチ（９月２１日）</a></p>
+<p>&nbsp;</p>
+<p><a href="1201.html">女性のためのヘルスケア（１２月１日～２日）</a></p>
+<p>&nbsp;</p>
+<p><a href="0126.html">肩関節障害の評価と治療（１月２６日～２７日※予定）</a></p>
+<p>&nbsp;</p>
+
+
     </div>
 <footer>
 
   <table border="0" width="950px" cellpadding="0">
   <tr>
-    <td><a href="../index.html"><img src="../img/IMG_0350.jpg" width="210" height="90" alt="勉強会"></a></td>
+    <td><a href="../event/index.html"><img src="../img/IMG_0350.jpg" width="210" height="90" alt="勉強会"></a></td>
     <td><a href="../volunteer/index.html"><img src="../img/v.png" width="210" height="90" alt="海外ボランティア"></a></td>
     <td><a href="http://ftp.minasehp.jp/"><img src="../img/m.png" width="210" height="90" alt="水無瀬病院"></a></td>
     <td><a href="../mail/index.html"><img src="../img/t.png" width="210" height="90" alt="お問い合わせ"></a></td>
