--- a/staff/staff_so.html
+++ b/staff/staff_so.html
@@ -12,16 +12,16 @@
     <img src="../img/header.png" alt="header">
     <ul id="nav">  
 		<li><a href="../index.html">Home</a></li>  
-		<li><a href="staff.html">Staff</a></li>  
-		<li><a href="../event/event.html">Event</a></li>  
+		<li><a href="../index.html">Staff</a></li>  
+		<li><a href="../event/index.html">Event</a></li>  
 		<li><a href="../log/">Log</a></li>  
-		<li><a href="../volunteer/volunteer.html">Volunteer</a></li>  
+		<li><a href="../volunteer/index.html">Volunteer</a></li>  
 	</ul> 
   </header>
   <div id="main">
       	<div id="menu">
     <ul id="nav_sub">  
-		<li><a href="staff.html">奥田正作</a></li>
+		<li><a href="../index.html">奥田正作</a></li>
 		<li><a href="staff_kt.html">田中謙二</a></li>
 		<li><a href="staff_my.html">吉永光恵</a></li>
 		<li><a href="staff_hs.html">関寛樹</a></li>
@@ -56,10 +56,10 @@
     <footer>
  <table border="0" width="950px" cellpadding="0">
   <tr>
-    <td><a href="../event/event.html"><img src="../img/IMG_0350.jpg" width="210" height="90" alt="勉強会"></a></td>
-    <td><a href="../volunteer/volunteer.html"><img src="../img/v.png" width="210" height="90" alt="海外ボランティア"></a></td>
+    <td><a href="../event/index.html"><img src="../img/IMG_0350.jpg" width="210" height="90" alt="勉強会"></a></td>
+    <td><a href="../volunteer/index.html"><img src="../img/v.png" width="210" height="90" alt="海外ボランティア"></a></td>
     <td><a href="http://ftp.minasehp.jp/"><img src="../img/m.png" width="210" height="90" alt="水無瀬病院"></a></td>
-    <td><a href="../mail/mail.html"><img src="../img/t.png" width="210" height="90" alt="お問い合わせ"></a></td>
+    <td><a href="../mail/index.html"><img src="../img/t.png" width="210" height="90" alt="お問い合わせ"></a></td>
   </tr>
 </table>
 
