山本 キャンセル時のアラートでキャンセルボタンを表示させた 「前に戻る」「トップに戻る」ボタンを設置した
git-svn-id: svn+ssh://rinshoundoshogai.sakura.ne.jp/home/rinshoundoshogai/svn/rinsho@35 a4f8b3a5-e007-e211-b16c-525400821517

--- a/system/failed.html
+++ b/system/failed.html
@@ -9,6 +9,8 @@
 	</head>
 	<body>
 		<h1>失敗</h1>
-		<a href ="./index.html">戻る</a>
-	</body>
+	<div style="float:right; position:relative; right:100px;">
+<a href="<?php echo $_SERVER['HTTP_REFERER'];?>">前に戻る</a>　<a href ="./index.html" >トップに戻る</a>
+</div>
+</body>
 </html>
