山本 おかしいところを訂正 申込期限を過ぎた事を通知するコードを作成した SQLの実行結果をcsv形式で出力する様にした(出力するだけ 行く行くは終了した研修の希望者の情報を出力し、該当レコードをテーブルから削除する様に変更予定)
git-svn-id: svn+ssh://rinshoundoshogai.sakura.ne.jp/home/rinshoundoshogai/svn/rinsho@40 a4f8b3a5-e007-e211-b16c-525400821517

--- a/system/compleate.html
+++ b/system/compleate.html
@@ -10,7 +10,7 @@
 	<body>
 		<h1>完了</h1>
 <div style="float:right; position:relative; right:100px;">
-<a href="<?php echo $_SERVER['HTTP_REFERER'];?>">前に戻る</a>　<a href ="./index.html" >トップに戻る</a>
+<a href="<?php echo $from_where;?>">前に戻る</a>　<a href ="./index.html" >トップに戻る</a>
 </div>
 </body>
 </html>
