山本 phpファイルへのリンクへ修正
git-svn-id: svn+ssh://rinshoundoshogai.sakura.ne.jp/home/rinshoundoshogai/svn/rinsho@44 a4f8b3a5-e007-e211-b16c-525400821517

--- a/mail/index.html
+++ b/mail/index.html
@@ -10,9 +10,9 @@
   <header>
     <img src="../img/header.png" alt="header">
     <ul id="nav">  
-		<li><a href="../index.html">Home</a></li>  
+		<li><a href="../index.php">HOME</a></li>  
 		<li><a href="../staff/index.html">Staff</a></li>  
-		<li><a href="../event/index.html">Event</a></li>  
+		<li><a href="../event/index.php">Event</a></li>  
 		<li><a href="../log/">Log</a></li>  
 		<li><a href="../volunteer/index.html">Volunteer</a></li>  
 	</ul> 
@@ -61,7 +61,7 @@
   <footer>
  <table border="0" width="950px" cellpadding="0">
   <tr>
-    <td><a href="../event/index.html"><img src="../img/IMG_0350.jpg" width="210" height="90" alt="勉強会"></a></td>
+    <td><a href="../event/index.php"><img src="../img/IMG_0350.jpg" width="210" height="90" alt="勉強会"></a></td>
     <td><a href="../volunteer/index.html"><img src="../img/v.png" width="210" height="90" alt="海外ボランティア"></a></td>
     <td><a href="http://ftp.minasehp.jp/"><img src="../img/m.png" width="210" height="90" alt="水無瀬病院"></a></td>
     <td><a href="../mail/index.html"><img src="../img/t.png" width="210" height="90" alt="お問い合わせ"></a></td>
