--- a/staff/index.html
+++ b/staff/index.html
@@ -11,9 +11,9 @@
   <header>
     <img src="../img/header.png" alt="header">
     <ul id="nav">  
-		<li><a href="../index.html">Home</a></li>  
+		<li><a href="../index.php">HOME</a></li>  
 		<li><a href="../index.html">Staff</a></li>  
-		<li><a href="../event/index.html">Event</a></li>  
+		<li><a href="../event/index.php">Event</a></li>  
 		<li><a href="../log/">Log</a></li>  
 		<li><a href="../volunteer/index.html">Volunteer</a></li>  
 	</ul> 
@@ -21,7 +21,7 @@
   <div id="main">
       	<div id="menu">
     <ul id="nav_sub">  
-		<li><a href="../index.html">奥田正作</a></li>
+		<li><a href=".">奥田正作</a></li>
 		<li><a href="staff_kt.html">田中謙二</a></li>
 		<li><a href="staff_my.html">吉永光恵</a></li>
 		<li><a href="staff_hs.html">関寛樹</a></li>
@@ -63,7 +63,7 @@
     <footer>
  <table border="0" width="950px" cellpadding="0">
   <tr>
-    <td><a href="../event/index.html"><img src="../img/IMG_0350.jpg" width="210" height="90" alt="勉強会"></a></td>
+    <td><a href="../event/index.php"><img src="../img/IMG_0350.jpg" width="210" height="90" alt="勉強会"></a></td>
     <td><a href="../volunteer/index.html"><img src="../img/v.png" width="210" height="90" alt="海外ボランティア"></a></td>
     <td><a href="http://ftp.minasehp.jp/"><img src="../img/m.png" width="210" height="90" alt="水無瀬病院"></a></td>
     <td><a href="../mail/index.html"><img src="../img/t.png" width="210" height="90" alt="お問い合わせ"></a></td>
