--- a/volunteer/volunteer.html
+++ b/volunteer/volunteer.html
@@ -10,9 +10,9 @@
   <header>
     <img src="../img/header.png" alt="header">
     <ul id="nav">  
-		<li><a href="../index.html">Home</a></li>  
-		<li><a href="../staff/staff.html">Staff</a></li>  
-		<li><a href="../event/event.html">Event</a></li>  
+		<li><a href="../index.php">HOME</a></li>  
+		<li><a href="../staff/index.html">Staff</a></li>  
+		<li><a href="../event/index.php">Event</a></li>  
 		<li><a href="../log/">Log</a></li>  
 		<li><a href="volunteer.html">Volunteer</a></li>  
 	</ul> 
@@ -53,7 +53,7 @@ eea2e3f179cbb9df492576f600126abb?OpenDocument">＊「ベトナム南部地域医
     <footer>
       <table border="0" width="950px" cellpadding="0">
   <tr>
-    <td><a href="../event/event.html"><img src="../img/IMG_0350.jpg" width="210" height="90" alt="勉強会"></a></td>
+    <td><a href="../event/index.php"><img src="../img/IMG_0350.jpg" width="210" height="90" alt="勉強会"></a></td>
     <td><a href="volunteer.html"><img src="../img/v.png" width="210" height="90" alt="海外ボランティア"></a></td>
     <td><a href="http://ftp.minasehp.jp/"><img src="../img/m.png" width="210" height="90" alt="水無瀬病院"></a></td>
     <td><a href="../mail/mail.html"><img src="../img/t.png" width="210" height="90" alt="お問い合わせ"></a></td>
