コピーライト変えた
git-svn-id: svn+ssh://rinshoundoshogai.sakura.ne.jp/home/rinshoundoshogai/svn/rinsho@54 a4f8b3a5-e007-e211-b16c-525400821517

--- a/admin/index.html
+++ b/admin/index.html
@@ -432,7 +432,7 @@ article section figure	{margin-left:0}
 
 <!-- フッター -->
 <footer>
-<small>Copyright (C) Miyazaki Seminar, All rights reserved.</small>
+<small>Copyright (C) Rinsho Undo Kenkyukai, All rights reserved.</small>
 </footer>
 
 </div>
