山本 systemの見た目変更 日時に基づきメールをするものの動作確認、修正 admin/index.htmlのボタンの様になっている箇所全体をリンクにした URL入力で直接来られてはまずいphpファイルでリファラを確認する様にした
git-svn-id: svn+ssh://rinshoundoshogai.sakura.ne.jp/home/rinshoundoshogai/svn/rinsho@55 a4f8b3a5-e007-e211-b16c-525400821517

--- a/admin/index.html
+++ b/admin/index.html
@@ -16,6 +16,17 @@ body	{font-family: 'メイリオ', 'Hiragino Kaku Gothic Pro', sans-serif;
 
 a	{color: #017acd}
 
+section a	{color: #017acd
+	display:block;
+	width:100%;
+	height:100%;
+	position:absolute;
+	left:0;
+	top:0;}
+	
+section a:hover {background:rgba(0,0,0,0.2);}
+
+
 /* コンテナ */
 div#container	{width: 900px;
 	margin-left: auto;
@@ -396,11 +407,10 @@ article section figure	{margin-left:0}
 <section>
 <h1>研修会管理システム</h1>
 
-<a href="http://rinshoundoshogai.sakura.ne.jp/system/index.html">
+<a href="http://rinshoundoshogai.sakura.ne.jp/system/index.html"></a>
 <figure><img src="DBSS.jpg" alt="研修会管理システム" width="250" height="165">
 <figcaption>研修会DBへアクセス</figcaption>
 </figure>
-</a>
 <p>研修会の追加・編集・削除ができます。</p>
 <p>研修会への参加者の情報確認、更新もこちらで可能です。</p>
 </section>
@@ -408,10 +418,10 @@ article section figure	{margin-left:0}
 <section>
 <h1>記事投稿システム</h1>
 <a href="http://rinshoundoshogai.sakura.ne.jp/wp_log/wp-login.php">
+</a>
 <figure><img src="WPSS.jpg" alt="記事投稿システム" width="250" height="165">
 <figcaption>WordPressを利用</figcaption>
 </figure>
-</a>
 <p>お知らせ・活動記録・ドミニカレポート等の記事の投稿・編集が可能です。</p>
 </section>
 
@@ -419,12 +429,10 @@ article section figure	{margin-left:0}
 <section>
 <h1>臨床運動研究会HP</h1>
 <a href="http://rinshoundoshogai.sakura.ne.jp/">
+</a>
 <figure><img src="HPSS.jpg" alt="臨床運動研究会HP" width="250" height="165" itemprop="image">
 <figcaption>臨床運動研究会のHPへのリンクです。</figcaption>
 </figure>
-</a>
-<p></p>
-<p></p>
 </section>
 </div>
 
