--- a/staff/staff_my.html
+++ b/staff/staff_my.html
@@ -12,7 +12,7 @@
     <img src="../img/header.png" alt="header">
     <ul id="nav">  
 		<li><a href="../index.php">HOME</a></li>  
-		<li><a href="../index.html">Staff</a></li>  
+		<li><a href="./index.html">Staff</a></li>  
 		<li><a href="../event/index.php">Event</a></li>  
 		<li><a href="../log/">Log</a></li>  
 		<li><a href="../volunteer/index.html">Volunteer</a></li>  
@@ -21,7 +21,7 @@
   <div id="main">
       	<div id="menu">
     <ul id="nav_sub">  
-		<li><a href="../index.html">奥田正作</a></li>
+		<li><a href="./index.html">奥田正作</a></li>
 		<li><a href="staff_kt.html">田中謙二</a></li>
 		<li><a href="staff_my.html">吉永光恵</a></li>
 		<li><a href="staff_hs.html">関寛樹</a></li>
