--- a/staff/staff.html
+++ b/staff/staff.html
@@ -22,7 +22,7 @@
       	<div id="menu">
     <ul id="nav_sub">  
 		<li><a href="staff.html">奥田正作</a></li>
-		<li><a href="staff_kt.html">田中謙二</a></li>
+		<li><a href="staff_kt.html">田中謙次</a></li>
 		<li><a href="staff_my.html">吉永光恵</a></li>
 		<li><a href="staff_hs.html">関寛樹</a></li>
 		<li><a href="staff_so.html">岡田真也</a></li>
